Created Addresses And Controllers. Modified a big part of the code. Removed DTO noit strictly useful